--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "ethers": "^6.9.0",
     "flatted": "^3.2.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
