--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
+    "@nestjs-plus/discovery": "^2.0.2",
+    "@nestjs-plus/rabbitmq": "^1.4.4",
+    "@nestjs/common": "^10.2.10",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -35,13 +37,15 @@
     "ethers": "^6.9.0",
     "flatted": "^3.2.9",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.2",
-    "mongoose-auto-increment": "^5.0.1",
+    "mongoose": "^8.0.3",
+    "mongoose-sequence": "^5.3.1",
+    "nanoid": "^5.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -51,6 +55,7 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^3.0.13",
